<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.9">
  <GVL Name="GVL" Id="{884c114f-e978-4949-b759-3e84d5a1e2f7}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	{attribute 'OPC.UA.DA' := '1'}
	fTE         : ARRAY [1..19] OF REAL;
	{attribute 'OPC.UA.DA' := '1'}
    bHV AT %Q*  : ARRAY [1..11] OF BOOL;
	{attribute 'OPC.UA.DA' := '1'}
    bP1, bP2	: BOOL := TRUE;
	{attribute 'OPC.UA.DA' := '1'}
    bFan AT %Q*  : BOOL;
	{attribute 'OPC.UA.DA' := '1'}
    bST         : BOOL;
	{attribute 'OPC.UA.DA' := '1'}
	stP1		: GrundfosMagna3;
	{attribute 'OPC.UA.DA' := '1'}
	stP2		: GrundfosMagna3;
	{attribute 'OPC.UA.DA' := '1'}
	bLoadTank1	: BOOL := TRUE;
	{attribute 'OPC.UA.DA' := '1'}
	bLoadTank2	: BOOL := TRUE;
	{attribute 'OPC.UA.DA' := '1'}
	bLoadTank3	: BOOL := TRUE;
	{attribute 'OPC.UA.DA' := '1'}
	stMain	: ARRAY [1..3] OF EL3433Measurement; 
	{attribute 'OPC.UA.DA' := '1'}
	stSolarL1	: EL3433Measurement;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>