<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.9">
  <GVL Name="HWVar" Id="{a9fe444f-f3e5-43bc-a37d-94d398f7c6cf}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	stKL3204_in     AT %I*  : ST_KL320xInData ;
	stKL3204_out    AT %Q*  : ST_KL320xOutData ;
    iAI1_VK         AT %I*  : ARRAY [1..4] OF INT;
    iAI1_JK         AT %I*  : ARRAY [1..4] OF INT;
    ModbusMaster            : ModbusRtuMaster_KL6x22B;
	EL3433_Grid	AT %I*		: ARRAY[1..3] OF stEL3433_In;
	EL3433_GridIndex AT %Q*	: ARRAY[1..3] OF USINT;
	EL3433_SolarIndex AT %Q*	: USINT;
	EL3433_Solar AT %I*		: stEL3433_In;
	
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>